--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="estilo.css">
   
-  <title>Busca</title>
-
+  <title>PegaTrampo</title>
 </head>
   
   <body>
     <main>
       <div class="container">
-        <h1>Construa seu Futuro</h1>
-        <p>Oferecemos vagas de emprego agora mesmo!</p>
+        <h1 class="text">Construa seu Futuro</h1>
+        <p class="text">Oferecemos vagas de emprego agora mesmo!</p>
         
         <div class="box-search">
           <div class="search" style="max-width: 352px;">
